agregando mención de imagen de fondo y acomodando el boton copiar

--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
 
         <main>
             <section class="input">
-                <textarea id="text0" cols="120" rows="6" placeholder="Type your text here"></textarea>
+                <textarea id="text0" cols="120" rows="6" placeholder="Ingresa aqui tu texto"></textarea>
             </section>
 
             <section class="action">
                 <div class="note">
-                    &#9888; Just use lowercase letters and without accents.
+                    &#9888; Solo usa minúsculas y sin acentos.
                 </div>
 
                 <div class="buttons">
-                    <a href="#" id="En" onclick="encrypt()">Encrypt</a>
-                    <a href="#" id="De" onclick="decrypt()">Decrypt</a>
+                    <a href="#" id="En" onclick="encrypt()">Encriptar</a>
+                    <a href="#" id="De" onclick="decrypt()">Desencriptar</a>
                 </div>
             </section>
             
             <section class="output">
                 <textarea id="result" cols="120" rows="20" readonly placeholder="Ningun mensaje fue encontrado."></textarea>
 
-                <a href="#" id="copyB" onclick="copy()">Copy</a>
+                <a href="#" id="copyB" onclick="copy()">Copiar</a>
             </section>
         </main>
 
         <footer>
-            <p>&copy Created by MrGomez / Alura-Latam</p>
+            <p>&copy Creado by MrGomez / Alura-Latam / Imagen de fondo de <a href="https://pixabay.com/es/users/pixies-1021586/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=785742">Daniel Agrelo</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=785742">Pixabay</p>
             <div class="icon-container">
                 <a href="https://www.linkedin.com/in/juan-gomez-7554a1218/"><img  class="contactIcons" src="Material/LinkedIn_logo_initials.png" alt="Logo Linkedin"></a>
                 <a href="https://github.com/MrGomez19"><img class="contactIcons" src="Material/Github_logo.png" alt="Logo Git-hub"></a>
